--- a/entries/entry6/main.css
+++ b/entries/entry6/main.css
@@ -1,9 +1,45 @@
 body {
-  background-image: radial-gradient(red, yellow);
+  background-image: radial-gradient(#ee84a8, #fcedbe);
 }
 
+h1{
+  text-align: center;
+  font-family: "yink", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 45px;
+  color: #D35B7E;
+  text-shadow: 0 0 20px #ffffff;
+  margin-top: 45px;
+}
 
+h2{
+  text-align: center;
+  font-family: "hwt-arabesque", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #D86E8C;
+  text-shadow: 0 0 10px #ffffff;
+  margin-top: -10px;
+}
+
+.roll{
+  padding: 15px;
+  font-family: "houschka-rounded", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 18px;
+  color: #fcedbe;
+}
 
 .flex-item-left{
-  font-size: 15px;
+  color: white;
+  font-size: 16px;
+  text-align: center;
+  font-family: "houschka-rounded", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-shadow: 0 0 7px #ffffff;
 }
+
+
