--- a/entries/entry2/main.css
+++ b/entries/entry2/main.css
@@ -1,37 +1,79 @@
 body {
-  background-color: #d8b288;
-  color:#723826;
-  font-family:monospace;
+  background-attachment: fixed;
+  background-image: url('e2bk.jpg'); 
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-position: center; 
 }
 
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.t1 {
+  text-align: center;
+  font-family: "piepie", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 45;
+  color: #FFCE50;
+  margin-top: 18px;
+  text-shadow: 0 0 15px #BB5B14;
 }
 
-h1 {
-  font-size: 30px;
+.t2 {
+  text-align: center;
+  color: #FFCE50;
+  font-family: "brevia", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  font-size: 20;
+  font-style: normal;
+  margin-top: -20px;
+  text-shadow: 0 0 10px #BB5B14;
 }
 
-h2 {
-  font-size: 20px;
+.flex-container {
+    display: flex;
+    margin: 25px;
+    margin-right: 80px;
+    margin-top: 40px;
+  }
+
+.flex-item1 {
+    flex: 1;
+    padding: 30px;
+    margin: 5px;
+    text-align: center;
+  }
+
+  .flex-item2 {
+    flex: 1;
+    padding: 10px 40px 10px 40px;
+    margin: 5px;
+    background-color: orange;
+    background-color: rgba(254, 226, 162, 0.75); 
+    color: #D3684A;
+    text-align: center;
+    font-size: 14px;
+    line-height: 1.6;
+    border-radius: 15px;
+    font-family: "brevia", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+
+.flex-container2 {
+  display: flex;
+  margin: 10px;
 }
 
-h3 {
-  font-size: 17px;
+.flex-item3 {
+  flex: 1;
+  padding: 30px;
+  margin: 5px;
 }
 
-p{
- background-color:#E3D2B8;
- font-size:15px;
- margin: 20px 50px 35px 50px;
- line-height: 1.2;
+@media (max-width: 768px) {
+  .flex-container {
+    flex-direction: column;
+    margin: 25px;
+  }
 }
 
-p{
- background-color:#E3D2B8;
- font-size:15px;
- margin: 20px 50px 35px 50px;
-}
