--- a/entries/entry3/main.css
+++ b/entries/entry3/main.css
@@ -1,7 +1,9 @@
-
 body {
- background-image: url("entry3back.jpeg");
- background-size: 100% 100%;
+  background-attachment: fixed;
+  background-image: url('e3bk.gif'); 
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-position: center; 
 }
 
 marquee{
@@ -17,6 +19,7 @@ h1{
  font-weight: 400;
  font-style: normal;
  color:#9FF4DF;
+ font-size: 40px;
 }
 
 h3{
@@ -33,8 +36,9 @@ p{
  font-style: normal;
 
  font-size:15px;
- line-height: 1.5;
+ line-height: 1.2;
  color:#3A2DD6;
+
 
  background-color:#9FF4DF;
  margin: 20px 80px 35px 80px;
