--- a/entries/entry3/main.css
+++ b/entries/entry3/main.css
@@ -6,65 +6,115 @@ body {
   background-position: center; 
 }
 
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    margin-top: 40px;
+}
+
+.flex-item1 {
+	flex: 1 0 10%; 
+    margin: 20px;
+}
+
+.flex-item2 {
+	flex: 1 0 10%; 
+    margin: 20px;
+}
+
+.flex-item3 {
+	flex: 1 0 10%; 
+    margin: 20px;
+ }
+
+.flex-item4 {
+	flex: 1 0 10%; 
+    margin: 20px;
+}
+    
+@media (max-width: 768px) {
+	.flex-container {
+		flex: 1 0 100%; 
+	}
+}
+
 marquee{
  font-size:20px;
  font-family: "pf-pixelscript", sans-serif;
  font-weight: 400;
  font-style: normal;
- color:#9FF4DF;
+ color: #FF76EB;
+ text-shadow: 0 0 5px #1D1021;
 }
 
 h1{
  font-family: "lores-9-plus-narrow", sans-serif;
  font-weight: 400;
  font-style: normal;
- color:#9FF4DF;
+ color: #67fffd;
+ text-shadow: 0 0 20px #05114b;
  font-size: 40px;
 }
 
-h3{
- font-size:20px;
+h2{
+ font-size: 23px;
  font-family: "pf-pixelscript", sans-serif;
- font-weight: 400;
+ font-weight: 600;
  font-style: normal;
- color:#9FF4DF;
+ color: #67fffd;
+ text-shadow: 0 0 20px #05114b;
+ margin-top: -15px;
 }
-
-
 
 .p1{
  font-family: "lores-9-plus-narrow", sans-serif;
- font-weight: 400;
+ font-weight: 600;
  font-style: normal;
- font-size:15px;
+ font-size: 15px;
  line-height: 1.2;
- color:#3A2DD6;
- background-color:#9FF4DF;
- border-radius: 10px
- margin: 20px 80px 35px 80px;
+ text-align: left;
+ color: #3A2DD6;
+ text-shadow: 0 0 5px #ffffff;
+ background-color: rgba(170, 228, 238, 0.85);
+ margin-right: 130px;
+ margin-left: 20px;
+ margin-top: 30px;
+ padding: 5px 20px 5px 20px;
+ border-radius: 5px
 }
 
 .p2{
  font-family: "lores-9-plus-narrow", sans-serif;
- font-weight: 400;
+ font-weight: 600;
  font-style: normal;
- font-size:15px;
+ font-size: 15px;
  line-height: 1.2;
- color:#3A2DD6;
- background-color:#9FF4DF;
- border-radius: 10px
- margin: 20px 80px 35px 80px;
+ text-align: right;
+ color: #3A2DD6;
+ text-shadow: 0 0 5px #ffffff;
+ background-color: rgba(170, 228, 238, 0.85);
+ margin-top: 20px;
+ margin-right: 20px;
+ margin-left: 130px;
+ padding: 5px 20px 5px 20px;
+ border-radius: 5px
 }
 
 .p3{
  font-family: "lores-9-plus-narrow", sans-serif;
- font-weight: 400;
+ font-weight: 600;
  font-style: normal;
- font-size:15px;
+ font-size: 15px;
  line-height: 1.2;
- color:#3A2DD6;
- background-color:#9FF4DF;
- border-radius: 10px
- margin: 20px 80px 35px 80px;
+ text-align: left;
+ color: #3A2DD6;
+ text-shadow: 0 0 5px #ffffff;
+ background-color: rgba(170, 228, 238, 0.85); 
+ margin-top: 20px;
+ margin-right: 130px;
+ margin-left: 20px;
+ padding: 5px 20px 5px 20px;
+ border-radius: 5px
 }
 
