--- a/entries/entry5/main.css
+++ b/entries/entry5/main.css
@@ -42,7 +42,7 @@ h3{
     
 .y1:hover + .y1t {
   display: block;
-  color: mediumvioletred;
+  color: #F07F9D;
   font-size:18px;
   font-family: "grover-slab", serif;
   font-weight:400;
@@ -58,7 +58,7 @@ h3{
     
 .y2:hover + .y2t {
   display: block;
-  color: hotpink;
+  color: #F07F9D;
   font-size:18px;
   font-family: "grover-slab", serif;
   font-weight:400;
@@ -68,33 +68,30 @@ h3{
   margin-bottom:50px;
 }
 
-.p1{
-  float:left;
-  color:white;
-  position:relative;
-  width:300px;
-  height:100px;
-  margin-left:15px;
-  margin-top:0px;
+.left-text{
+  text-align: left;
+  color: white;
+  position: relative;
+  width: 280px;
+  height: auto;
   font-family: "grover-slab", serif;
-  font-weight:400;
+  font-weight: 600;
   font-style: normal;
-  font-size:13px;
+  font-size: 13px;
+  line-height: 1.6;
 }
 
-.p2{
-  float:right;
+.right-text{
   text-align: right;
-  color:white;
-  position:relative;
-  width:300px;
-  height:100px;
-  margin-right:15px;
-  margin-top:70px;
+  color: white;
+  position: relative;
+  width: 280px;
+  height: auto;
   font-family: "grover-slab", serif;
-  font-weight:400;
+  font-weight: 600;
   font-style: normal;
-  font-size:13px;
+  font-size: 13px;
+  line-height: 1.6;
 }
 
 .y1{
