--- a/entries/entry6/main.css
+++ b/entries/entry6/main.css
@@ -32,14 +32,87 @@ h2{
   color: #fcedbe;
 }
 
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+}
+
 .flex-item-left{
   color: white;
-  font-size: 16px;
-  text-align: center;
+  font-size: 17px;
+  line-height: 1.7;
+  text-align: left;
   font-family: "houschka-rounded", sans-serif;
   font-weight: 600;
   font-style: normal;
-  text-shadow: 0 0 7px #ffffff;
+  text-shadow: 0 0 3px #ffffff;
+  padding: 10px;
+  flex: 50%;
+  margin-top: 5px;
+  margin-left: 60px;
+  margin-right: 60px;
+  max-width: 800px;
+}
+
+p:hover, p:active {color: #9E002D;}
+
+img {
+  opacity: 0.88;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.flex-item-right {
+  padding: 20px;
+  flex: 50%;
+  margin-top: 40px;
+  margin-left: -10px;
+}
+
+@media (max-width: 768px) {
+  .flex-container {
+    flex-direction: column;
+  }
+}
+
+.flip-box {
+  background-color: transparent;
+  perspective: 1000px;
+}
+
+.flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-box-front, .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-box-front {
+  background-color: #bbb;
+}
+
+.flip-box-back {
+  font-size: 30px;
+  color: #D35B7E;
+  background-color: #555;
+  transform: rotateY(180deg);
 }
 
 
