--- a/entries/entry5/main.css
+++ b/entries/entry5/main.css
@@ -1,78 +1,105 @@
 body {
- background-image: url("e5bk.jpg");
- background-size: 100%;
+  background-attachment: fixed;
+  background-image: url("e5bk.jpg");
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-position: center; 
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.left-text, .right-text {
+  flex: 1;
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  padding: 10px;
+}
+
+.center-images {
+  display: flex;
+  flex: 2;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  margin: 20px;
+  margin-top: 45px;
+  margin-right: -160px;
+}
+
+.center-image {
+  flex: 0 0 40%; 
+  margin: -10px;
+}
+
+@media (max-width: 768px) {
+  .content {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.center-images {
+  flex: 1;
+}
+
+.center-image {
+    flex: 0 0 100%;
+  }
 }
 
 h1{
-  color:white;
-  font-family: "grover-slab", serif;
-  font-weight:400;
-  font-style: normal;
-  font-size:24px;
-}
-
-h3{
-  color:white;
-  font-family: "grover-slab", serif;
-  font-weight:400;
-  font-style: normal;
-  font-size:18px;
-}
-
-.t1 {
   color: white;
-  margin-top:10px;
-  font-size:18px;
-  font-family: "grover-slab", serif;
-  font-weight:400;
+  font-family: "meatball", sans-serif;
+  font-weight: 400;
   font-style: normal;
-  font-size: 18px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  font-size: 25px;
+  margin-top: 20px;
   text-align: center;
 }
 
-.y1t {
-  display: none;
-}
-    
-.y1:hover + .y1t {
-  display: block;
-  color: #F07F9D;
-  font-size:18px;
+h3{
+  color: white;
   font-family: "grover-slab", serif;
-  font-weight:400;
+  font-weight: 600;
   font-style: normal;
-  float:left;
-  margin-top:40px;
-  margin-left:0px;
+  font-size: 19px;
+  margin-top: -5px;
+  text-align: center;
 }
 
-.y2t {
-  display: none;
+.top {
+  text-align: center;
+  margin-bottom: -10px;
 }
-    
-.y2:hover + .y2t {
-  display: block;
-  color: #F07F9D;
-  font-size:18px;
-  font-family: "grover-slab", serif;
-  font-weight:400;
-  font-style: normal;
-  float:left;
-  margin-left:600px;
-  margin-bottom:50px;
+
+.content{
+
+}
+
+p:hover {
+  background-color: #FCA4B0;
+  padding: 10px;
+  text-shadow: 0 0 3px #B71540;
 }
 
 .left-text{
   text-align: left;
   color: white;
   position: relative;
-  width: 280px;
+  width: 450px;
   height: auto;
   font-family: "grover-slab", serif;
   font-weight: 600;
@@ -85,7 +112,7 @@ h3{
   text-align: right;
   color: white;
   position: relative;
-  width: 280px;
+  width: 450px;
   height: auto;
   font-family: "grover-slab", serif;
   font-weight: 600;
@@ -93,25 +120,3 @@ h3{
   font-size: 13px;
   line-height: 1.6;
 }
-
-.y1{
-  position:relative;
-  float:left;
-  margin-left:290px;
-  margin-top:20px;
-}
-
-.y2{
-  position:relative;
-  float:right;
-  margin-right:330px;
-  margin-top:40px;
-}
-
-.yb{
-  position:relative;
-  float:left;
-  margin-left:355px;
-  margin-top:30px;
-}
-
