--- a/entries/entry6/main.css
+++ b/entries/entry6/main.css
@@ -115,4 +115,11 @@ img {
   transform: rotateY(180deg);
 }
 
+footer{
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  padding: 5px;
+}
+
 
