--- a/entries/entry2/main.css
+++ b/entries/entry2/main.css
@@ -6,6 +6,15 @@ body {
   background-position: center; 
 }
 
+footer{
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  padding: 3px;
+  background-color: orange;
+  margin-top: 35px;
+}
+
 .t1 {
   text-align: center;
   font-family: "piepie", sans-serif;
