--- a/entries/entry3/main.css
+++ b/entries/entry3/main.css
@@ -6,6 +6,15 @@ body {
   background-position: center; 
 }
 
+footer{
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  padding: 3px;
+  background-color: #FF76EB;
+  margin-top: 35px;
+}
+
 .flex-container {
     display: flex;
     flex-wrap: wrap;
