--- a/entries/entry5/main.css
+++ b/entries/entry5/main.css
@@ -13,6 +13,15 @@ body {
   padding: 0px;
 }
 
+footer{
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  padding: 5px;
+  background-color: lightpink;
+  margin-top: 30px;
+}
+
 .content {
   display: flex;
   flex-wrap: wrap;
