--- a/entries/entry5/main.css
+++ b/entries/entry5/main.css
@@ -74,7 +74,7 @@ footer{
   }
 }
 
-h1{
+.t1 {
   color: white;
   font-family: "meatball", sans-serif;
   font-weight: 400;
@@ -111,8 +111,8 @@ h3{
 
 .top-text {
   color: white;
-  font-family: "grover-slab", serif;
-  font-weight: 600;
+  font-family: "meatball", sans-serif;
+  font-weight: 400;
   font-style: normal;
   font-size: 13px;
   position: absolute;
