--- a/homepage/main.css
+++ b/homepage/main.css
@@ -1,13 +1,13 @@
 body {
+  cursor: url("shub.png"), auto;
+}
+
+body {
   background-attachment: fixed;
   background-image: url("hpbk.jpg");
   background-size: cover; 
   background-repeat: no-repeat; 
   background-position: center; 
-}
-
-body {
-  cursor: url("shub.png"), auto;
 }
 
 body {
@@ -20,24 +20,44 @@ footer {
   text-align: center;
   position: fixed;
   width: 100%;
+  font-family: "lores-12", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .ordered-text {
+  font-size: 22px;
   position: absolute;
-  white-space: nowrap; /* 防止文本换行 */
+  white-space: nowrap; 
+  font-family: "lores-12", sans-serif;
+  font-weight: 600;
+  font-style: normal;
 }
 
-/* 设置每个文本的初始位置 */
-#text1 { top: 50px; left: 800px; }
-#text2 { top: 150px; left: 100px; }
-#text3 { top: 250px; left: 150px; }
-#text4 { top: 80px; left: 800px; }
-#text5 { top: 400px; left: 100px; }
-#text6 { top: 300px; left: 150px; }
+a {
+  text-decoration: none;
+  text-shadow: 0 0 15px rgba(255, 255, 255, 0.8); 
+}
 
+a:hover {
+  color: white;
+  text-shadow: 0 0 10px rgba(0, 0, 205, 0.8); 
+}
+
+.ordered-text:hover {
+  font-size: 27px;
+  color: white; 
+}
+
+#text1 { top: 100px; left: 450px; }
+#text2 { top: 200px; left: 150px; }
+#text3 { top: 300px; left: 600px; }
+#text4 { top: 400px; left: 1000px; }
+#text5 { top: 500px; left: 700px; }
+#text6 { top: 600px; left: 350px; }
 
 @media screen and (max-width: 768px) {
   .ordered-text {
-    position: static; /* 不再使用绝对定位 */
+    position: static; 
 
 
