--- a/homepage/main.css
+++ b/homepage/main.css
@@ -15,6 +15,17 @@ body {
   overflow: hidden;
 }
 
+h1 {
+  font-family: "lores-12", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 30px;
+  color: white;
+  margin-left: 20px;
+  text-shadow: 0 0 8px rgba(0, 0, 205, 0.8); 
+
+}
+
 footer {
   bottom: 0;
   text-align: center;
