--- a/entries/entry8/main.css
+++ b/entries/entry8/main.css
@@ -9,7 +9,10 @@ img {
 	text-align: center;
 	max-width: 100%;
 	cursor: pointer;
-	margin-top: 40px;
+	margin-top: 50px;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -23,11 +26,27 @@ h1 {
     color: white;
 }
 
-h3{
+h3 {
 	font-family: "puffin-display-soft", sans-serif;
     font-weight: 900;
     font-style: normal;
     color: white;
     font-size: 25px;
     text-align: center;
+}
+
+.text {
+	text-align: center;
+	font-family: "puffin-display-soft", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 15px;
+    color: white;
+    max-width: 750px;
+    line-height: 1.8;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+
 }
