--- a/entries/entry8/main.css
+++ b/entries/entry8/main.css
@@ -7,14 +7,14 @@ body {
 
 img {
 	text-align: center;
-	max-width: 100%;
+	max-height: 400px;
 	cursor: pointer;
 	margin-top: 50px;
 	display: block;
     margin-left: auto;
     margin-right: auto;
+    align-items: center;
 }
-
 
 h1 {
 	margin-top: 45px;
@@ -23,15 +23,16 @@ h1 {
     font-weight: 300;
     font-style: normal;
     font-size: 45px;
-    color: white;
+    color: #FDF0CE;
 }
 
 h3 {
 	font-family: "puffin-display-soft", sans-serif;
     font-weight: 900;
     font-style: normal;
-    color: white;
-    font-size: 25px;
+    color: #FCD79F;
+    font-size: 23px;
+    margin-top: -15px;
     text-align: center;
 }
 
@@ -41,12 +42,21 @@ h3 {
     font-weight: 600;
     font-style: normal;
     font-size: 15px;
-    color: white;
+    color: #FDF0CE;
     max-width: 750px;
     line-height: 1.8;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 60px;
+    margin-top: 30px;
+}
 
+.click {
+	margin-top: 60px;
+	text-align: center;
+	font-family: "puffin-display-soft", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 18px;
+    color: #FCD79F;
 }
