--- a/entries/entry6/main.css
+++ b/entries/entry6/main.css
@@ -127,6 +127,6 @@ footer{
 a{
   font-family: "houschka-rounded", sans-serif;
   font-weight: 600;
-  font-style: normal;
+  font-style: normal;3
 }
 
