--- a/entries/entry2/main.css
+++ b/entries/entry2/main.css
@@ -6,13 +6,27 @@ body {
   background-position: center; 
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 footer{
-  color: white;
   text-align: center;
-  font-size: 15px;
-  padding: 3px;
-  background-color: orange;
+  font-size: 14px;
+  padding: 10px;
+  background-color: #EB7556;
   margin-top: 35px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+
+a {
+  color: #FFDCA2;
+  font-family: "brevia", sans-serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .t1 {
@@ -21,9 +35,9 @@ footer{
   font-weight: 400;
   font-style: normal;
   font-size: 45;
-  color: #FFCE50;
+  color: #FDC441;
   margin-top: 18px;
-  text-shadow: 0 0 15px #BB5B14;
+  text-shadow: 0 0 10px #823D32;
 }
 
 .t2 {
@@ -33,60 +47,53 @@ footer{
   font-weight: 900;
   font-style: normal;
   font-size: 20;
-  font-style: normal;
   margin-top: -20px;
-  text-shadow: 0 0 10px #BB5B14;
+  text-shadow: 0 0 10px #823D32;
 }
 
-.flex-container {
-    display: flex;
-    margin: 25px;
-    margin-right: 80px;
-    margin-top: 40px;
-  }
+.container {
+  display: flex;
+  margin: 25px;
+  margin-right: 80px;
+  margin-top: 40px;
+}
 
-.flex-item1 {
-    flex: 1;
-    padding: 30px;
-    margin: 5px;
-    text-align: center;
-  }
+.item1 {
+  flex: 1;
+  padding: 30px;
+  margin: 5px;
+  text-align: center;
+}
 
-  .flex-item2 {
-    flex: 1;
-    padding: 10px 40px 10px 40px;
-    margin: 5px;
-    background-color: rgba(254, 226, 162, 0.75); 
-    color: #D3684A;
-    text-align: center;
-    font-size: 14px;
-    line-height: 1.6;
-    border-radius: 15px;
-    font-family: "brevia", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  }
+.item2 {
+  flex: 1;
+  padding: 15px 55px 15px 55px;
+  margin: 5px;
+  background-color: rgba(254, 226, 162, 0.75); 
+  color: #D3684A;
+  text-align: center;
+  font-size: 14.5px;
+  line-height: 1.7;
+  border-radius: 15px;
+  font-family: "brevia", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
 
-.flex-container2 {
+.container2 {
   display: flex;
   margin: 10px;
 }
 
-.flex-item3 {
+.item3 {
   flex: 1;
   padding: 30px;
   margin: 5px;
 }
 
 @media (max-width: 768px) {
-  .flex-container {
+  .container {
     flex-direction: column;
     margin: 25px;
   }
-}
-
-a{
-  font-family: "brevia", sans-serif;
-  font-weight: 500;
-  font-style: normal;
 }
