--- a/entries/entry10/main.css
+++ b/entries/entry10/main.css
@@ -6,14 +6,14 @@ body {
   background-position: center; 
 }
 
-#imageContainer {
+#imagecontainer {
   position: relative;
   overflow: hidden;
-  margin-left: 200px;
-  margin-top: 30px;
+  margin-left: 15%;
+  margin-top: 6vh;
 }
 
-#slideshow {
+#slides {
   display: flex;
   transition: transform 0.5s ease-in-out;
 }
@@ -32,16 +32,17 @@ body {
   font-family: "chorine-large", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 25px;
-  margin-top: 20px;
-  margin-left: 30px;
+  font-size: 28px;
+  margin-top: 40px;
+  margin-left: 40px;
+  letter-spacing: 1.3px;
   color: #FC57B8;
   text-shadow: 0 0 10px #FFD6ED;
 }
 
-#toggleButton {
-  margin-top: 15px;
-  margin-left: 30px;
+#togglebutton {
+  margin-top: 40px;
+  margin-left: 40px;
   padding: 10px;
   font-size: 15px;
   font-family: "brevia", sans-serif;
@@ -51,29 +52,31 @@ body {
   background-color: #FFD7EE;
   cursor: pointer;
   text-shadow: 0 0 5px #ffffff;
+  border-radius: 5px;
 }
 
 #content {
-  width: 50%;
-  margin: 30px;
-  margin-top: -10px;
+  width: 60%;
+  margin: 40px;
   margin-bottom: 60px;
 }
 
 p {
   font-family: "brevia", sans-serif;
-  font-weight: 900;
+  font-weight: 600;
   font-style: normal;
-  font-size: 17px;
-  line-height: 1.5;
+  font-size: 19px;
+  line-height: 1.7;
+  word-spacing: 1.3px;
+  letter-spacing: -0.3px;
   color: #704DD1;
   text-shadow: 0 0 10px #FFD6ED;
 }
 
-#scrollingText {
+#scrollingtext {
   position: fixed;
-  top: 40px;
-  right: 140px;
+  top: 5vh;
+  right: 10vh;
   width: 300px; 
   height: 100vh;
   overflow: hidden;
@@ -81,19 +84,18 @@ p {
   z-index: 100;
 }
 
-#scrollingText {
-  margin: 0px 0;
+#scrollingtext {
   animation: scroll 10s linear infinite; 
   transform: translateY(100%);
 }
 
-#scrollingText {
+#scrollingtext {
   font-family: "brevia", sans-serif;
-  font-weight: 900;
+  font-weight: 600;
   font-style: normal;
-  font-size: 18px;
+  font-size: 22px;
   color: #FB23A1;
-  text-shadow: 0 0 15px #FFD6ED;
+  text-shadow: 0 0 10px #FFFFFF;
 }
 
 @keyframes scroll {
@@ -103,4 +105,23 @@ p {
   to {
     transform: translateY(-100%); 
   }
+}
+
+footer {
+  text-align: center;
+  margin-top: 110px;
+  margin-bottom: 25px;
+}
+
+a {
+  font-size: 15px;
+  font-family: "brevia", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  color: #704DD1;
+  line-height: 2.8;
+  background-color: #FFD7EE;
+  padding: 8px 10px;
+  border-radius: 5px;
+  text-shadow: 0 0 5px #ffffff;
 }
