--- a/entries/entry9/main.css
+++ b/entries/entry9/main.css
@@ -8,14 +8,14 @@ body {
 }
 
 .container {
-  max-width: 900px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 35px;
   font-weight: bold;
-  margin-top: 40px;
+  margin-top: 45px;
   font-family: "neue-haas-unica", sans-serif;
   font-weight: 600;
   font-style: normal;
@@ -24,28 +24,35 @@ h1 {
 }
 
 .text {
+  margin: 10px;
   margin-top: 20px;
   font-family: "semplicitapro", sans-serif;
   font-weight: 500;
   font-style: normal;
-  color: lightblue;
-  font-size: 15px;
+  color: #BDE1F5;
+  font-size: 16px;
+  letter-spacing: 0.2px;
+  word-spacing: 1.4px;
   line-height: 1.8;
-  text-shadow: 0 0 12px #ffffff;
+  text-shadow: 0 0 18px #ffffff;
 }
 
 .wt {
-  margin-top: 15px;
+  margin-top: 25px;
   margin-bottom: 40px;
+  opacity: 0.9;
 }
 
 .caption {
-  margin-top: 35px;
+  color: #1A3D60;
+  margin-top: 50px;
+  margin-bottom: 40px;
   font-style: italic;
-  font-size: 23px;
+  font-size: 24px;
+  text-shadow: 0 0 3px #4A96E8;
 }
 
-#video-modal {
+#video {
   display: none;
   position: fixed;
   top: 0;
@@ -53,11 +60,36 @@ h1 {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.8);
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
-#video-modal video {
+#video video {
   max-width: 80%;
   max-height: 80%;
+}
+
+.button {
+  display: inline-block;
+  padding: 15px;
+  font-size: 12px;
+}
+
+footer {
+  text-align: center;
+  font-size: 12px;
+  padding: 5px;
+  background-color: rgba(146, 206, 240, 0.5);
+  border-radius: 5px;
+  margin-top: 60px;
+}
+
+a {
+  font-family: "semplicitapro", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  color: #2C66A0;
+  font-size: 16px;
+  line-height: 1.5;
+  text-shadow: 0 0 2px #4A96E8;
 }
