--- a/entries/entry7/main.css
+++ b/entries/entry7/main.css
@@ -1,13 +1,21 @@
 body {
   background-attachment: fixed;
-  background-image: url("bk7.jpg");
+  background-image: url("bk77.jpg");
   background-size: cover; 
   background-repeat: no-repeat; 
   background-position: center; 
 }
 
+body {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  margin: 0;
+}
+
 h1 {
   margin-left: 20px;
+  margin-top: 40px;
   font-size: 50px;
   font-family: "synthemesc", sans-serif;
   font-weight: 400;
@@ -19,7 +27,7 @@ h1 {
 h2 {
   font-size: 28px;
   color: #D57A48;
-  margin-left: 10px;
+  margin-left: 20px;
   font-family: "synthemesc", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -27,33 +35,27 @@ h2 {
 }
 
 #mt {
-  height: 70px;
+  height: 65px;
   margin-top: 10px;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   text-align: center;
   opacity: 0.5;
   animation: rotate 4s linear infinite;
+  padding: 10px;
 }
 
- @keyframes rotate {
+svg {
+  width: 100%;
+  height: 100px;       
+}
+
+@keyframes rotate {
   0% {
     transform: rotate(0deg);
   }
   100% {
     transform: rotate(360deg);
   }
-}
-
-body {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  margin: 0;
-}
-
-svg {
-  width: 100%;
-  height: 100px;       
 }
 
 .left-image, .center-text, .bottom-image, .right-image {
@@ -69,8 +71,8 @@ svg {
 .bottom-image {
   align-self: flex-end;
   text-align: center;
-  margin-top: 25px;
-  margin-bottom: 30px;
+  margin-top: 40px;
+  margin-bottom: 70px;
   position: relative;
 }
 
@@ -83,7 +85,7 @@ svg {
   height: 100%;
   width: 100%;
   opacity: 0;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 .bottom-image:hover .hover3 {
@@ -112,7 +114,8 @@ svg {
 
 .right-image {
   text-align: center;
-  margin-top: 30px;
+  margin-top: 50px;
+  margin-bottom: 60px;
   position: relative;
 }
 
@@ -125,7 +128,7 @@ svg {
   height: 100%;
   width: 100%;
   opacity: 0;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 .right-image:hover .hover2 {
@@ -154,7 +157,7 @@ svg {
 
 .left-image {
   text-align: center;
-  margin-top: 40px;
+  margin-top: -15px;
   position: relative;
 }
 
@@ -167,7 +170,7 @@ svg {
   height: 100%;
   width: 100%;
   opacity: 0;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 .left-image:hover .hover1 {
@@ -195,22 +198,25 @@ svg {
 }
 
 p {
-  text-align: left;
+  font-size: 17.5px;
+  text-align: center;
   font-family: "houschka-rounded", sans-serif;
   font-weight: 600;
   font-style: normal;
-  line-height: 1.65; 
-  color: #6A4524;
-  text-shadow: 0 0 10px #ffffff;
+  line-height: 1.5; 
+  color: #6B3A24;
+  letter-spacing: -0.3px;
+  word-spacing: 1.3px;
+  text-shadow: 0 0 10px #FAF4F0;
 }
 
 footer {
   font-size: 15px;
   text-align: center;
   font-family: "houschka-rounded", sans-serif;
-  font-weight: 800;
-  line-height: 1.65;
-  background-color: #FFE6D5;
+  font-weight: 600;
+  line-height: 1.6;
+  background: rgba(255,230,213,0.9);
   padding: 5px;
   position: fixed;
   margin-top: 150px;
@@ -218,9 +224,12 @@ footer {
   border-radius: 5px;
 }
 
+a {
+  color: #D26D37;
+}
+
 @media (max-width: 768px) {
   .left-image, .center-text, .bottom-image, .right-image {
     flex: 1 1 100%;
-    margin: 15px;
   }
 }
