--- a/entries/entry6/main.css
+++ b/entries/entry6/main.css
@@ -15,6 +15,7 @@ h1{
 
 h2{
   text-align: center;
+  font-size: 26px;
   font-family: "hwt-arabesque", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -38,21 +39,23 @@ h2{
   text-align: center;
 }
 
-.flex-item-left{
+.flex-left{
+  max-width: 670px;
   color: white;
-  font-size: 17px;
+  font-size: 18px;
   line-height: 1.7;
+  word-spacing: 1px;
+  letter-spacing: -0.1px;
   text-align: left;
   font-family: "houschka-rounded", sans-serif;
   font-weight: 600;
   font-style: normal;
-  text-shadow: 0 0 3px #ffffff;
+  text-shadow: 0 0 1px #ffffff;
   padding: 10px;
   flex: 50%;
   margin-top: 5px;
-  margin-left: 60px;
-  margin-right: 60px;
-  max-width: 800px;
+  margin-left: 110px;
+  margin-right: 55px;
 }
 
 p:hover, p:active {color: #9E002D;}
@@ -61,15 +64,11 @@ img {
   opacity: 0.88;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-.flex-item-right {
-  padding: 20px;
+.flex-right {
+  padding: 15px;
   flex: 50%;
-  margin-top: 40px;
-  margin-left: -10px;
+  margin-top: 85px;
+  margin-left: 0;
 }
 
 @media (max-width: 768px) {
@@ -83,20 +82,20 @@ img {
   perspective: 1000px;
 }
 
-.flip-box-inner {
+.flip-inner {
   position: relative;
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.8s;
+  transition: transform 0.7s;
   transform-style: preserve-3d;
 }
 
-.flip-box:hover .flip-box-inner {
+.flip-box:hover .flip-inner {
   transform: rotateY(180deg);
 }
 
-.flip-box-front, .flip-box-back {
+.flip-front, .flip-back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -104,29 +103,31 @@ img {
   backface-visibility: hidden;
 }
 
-.flip-box-front {
-  background-color: #bbb;
+.flip-front {
+  background-color: #bbbbbb;
 }
 
-.flip-box-back {
+.flip-back {
   font-size: 30px;
   color: #D35B7E;
-  background-color: #555;
+  background-color: #555555;
   transform: rotateY(180deg);
 }
 
 footer{
-  background-color: lightpink;
-  color: white;
   text-align: center;
   font-size: 15px;
-  padding: 5px;
-  margin-top: 600px;
+  padding: 7px;
+  position: fixed;
+  background-color: #F3A5BF;
+  border-radius: 10px;
+  margin-top: 40px;
 }
 
 a{
+  color: #fcedbe;
   font-family: "houschka-rounded", sans-serif;
   font-weight: 600;
-  font-style: normal;3
+  font-style: normal;
+  line-height: 1.5;
 }
-
