--- a/entries/entry9/main.css
+++ b/entries/entry9/main.css
@@ -23,9 +23,21 @@ h1 {
   text-shadow: 0 0 3px #ffffff;
 }
 
+h2 {
+  font-size: 22px;
+  font-weight: normal;
+  margin-top: -24px;
+  font-family: "neue-haas-unica", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+  color: skyblue;
+  letter-spacing: 0.5px;
+  text-shadow: 0 0 1.7px #ffffff;
+}
+
 .text {
   margin: 10px;
-  margin-top: 20px;
+  margin-top: 30px;
   font-family: "semplicitapro", sans-serif;
   font-weight: 500;
   font-style: normal;
