--- a/entries/entry1/main.css
+++ b/entries/entry1/main.css
@@ -12,10 +12,12 @@ footer{
   font-size: 15px;
   padding: 5px;
   background-color: lightgrey;
-  margin-top: 35px;
+  margin-top: 70px;
+  border-radius: 10px;
 }
 
 .h1{
+  margin-top: 20px;
   text-align: center;
   font-size: 40px;
   font-family: "anaphora-stencil", sans-serif;
@@ -32,7 +34,7 @@ footer{
   font-family: "anaphora-stencil", sans-serif;
   font-weight: 700;
   font-style: normal;
-  margin-top: -30px;
+  margin-top: -35px;
   color: #707070;
   text-shadow: 0 0 10px #ffffff;
 }
@@ -47,7 +49,7 @@ footer{
  font-weight: 600;
  font-style: normal;
  color: #474747;
- background-color: rgba(255, 255, 255, 0.6); 
+ background-color: rgba(255, 255, 255, 0.55); 
  padding: 2px 30px 2px 30px; 
  border-radius: 10px;
 }
@@ -61,7 +63,7 @@ footer{
  font-family: "trilby", serif;
  font-weight: 600;
  font-style: normal;
- background-color: rgba(255, 255, 255, 0.6); 
+ background-color: rgba(255, 255, 255, 0.55); 
  color: #474747;
  padding: 2px 30px 2px 30px;  
  border-radius: 10px;
@@ -76,7 +78,7 @@ footer{
  font-family: "trilby", serif;
  font-weight: 600;
  font-style: normal;
- background-color: rgba(255, 255, 255, 0.6); 
+ background-color: rgba(255, 255, 255, 0.55); 
  color: #474747;
  padding: 2px 30px 2px 30px; 
  border-radius: 10px;
@@ -84,27 +86,30 @@ footer{
 
 @media (min-width: 768px) {
 	.p {
-		padding-left: 150px;
-		padding-right: 150px;
-    }
+		padding-left: 160px;
+		padding-right: 160px;
+  }
 }
 
 @media (max-width: 992px) {
  	.p {
  		padding-left: 60px;
  		padding-right: 60px;
-    }
+  }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
  	.p {
  		padding-left: 25px;
  		padding-right: 25px;
-    }
+  }
 }
 
 a{
+  color: #707070;
+  font-size: 15px;
   font-family: "trilby", serif;
   font-weight: 600;
   font-style: normal;
+  line-height: 1.6;
 }
