--- a/homepage/main.css
+++ b/homepage/main.css
@@ -1,8 +1,4 @@
 body {
-  cursor: url("shub.png"), auto;
-}
-
-body {
   background-attachment: fixed;
   background-image: url("hpbk.jpg");
   background-size: cover; 
@@ -19,10 +15,29 @@ h1 {
   font-family: "lores-12", sans-serif;
   font-weight: 600;
   font-style: normal;
-  font-size: 30px;
+  font-size: 34px;
   color: white;
-  margin-left: 20px;
+  margin-left: 30px;
+  margin-top: 25px;
   text-shadow: 0 0 8px rgba(0, 0, 205, 0.8); 
+}
+
+div.scrollmenu {
+  background-color: #3157F0;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 15px;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  background-color: #0129CB;
 }
 
 footer {
@@ -46,7 +61,7 @@ footer {
 
 a {
   text-decoration: none;
-  text-shadow: 0 0 15px rgba(255, 255, 255, 0.8); 
+  text-shadow: 0 0 8px rgba(255, 255, 255, 0.9); 
 }
 
 a:hover {
@@ -59,19 +74,25 @@ a:hover {
   color: white; 
 }
 
-#text1 { top: 100px; left: 450px; }
-#text2 { top: 200px; left: 150px; }
-#text3 { top: 300px; left: 600px; }
-#text4 { top: 400px; left: 1000px; }
-#text5 { top: 500px; left: 700px; }
-#text6 { top: 650px; left: 350px; }
-#text7 { top: 800px; left: 450px; }
-#text8 { top: 600px; left: 550px; }
-#text9 { top: 700px; left: 200px; }
-#text10 { top: 800px; left: 150px; }
+#text1 { top: 80px; left: 450px; }
+#text2 { top: 160px; left: 150px; }
+#text3 { top: 220px; left: 600px; }
+#text4 { top: 280px; left: 1100px; }
+#text5 { top: 350px; left: 700px; }
+#text6 { top: 400px; left: 320px; }
+#text7 { top: 480px; left: 100px; }
+#text8 { top: 520px; left: 600px; }
+#text9 { top: 630px; left: 200px; }
+#text10 { top: 670px; left: 1050px; }
 
 @media screen and (max-width: 768px) {
   .ordered-text {
-    position: static; 
-
-
+    font-size: 19px;
+    position: static;
+    margin: 10px;
+    line-height: 1.6;
+  }
+  .ordered-text:hover {
+    font-size: 22px;
+  }
+}
