--- a/pages/p3/main.css
+++ b/pages/p3/main.css
@@ -36,12 +36,34 @@ body{
     opacity: 0.98;
 }
 
-.element .overlap-group {
+
+
+
+.element .rectangle-2 {
     position: absolute;
+    width: 314px;
+    height: 216px;
+    top: 842px;
+    left: 756px;
+    filter: blur(40px);
+    background: linear-gradient(180deg, rgb(217, 217, 217) 0%, rgba(217, 217, 217, 0) 100%);
+    opacity: 0.7;
+}
+
+.element .component {
+    position: absolute;
+    width: 541px;
+    height: 1324px;
+    top: -140px;
+    left: 1095px;
+}
+
+.element .overlap-group {
+    position: relative;
     width: 425px;
     height: 1016px;
-    top: -3px;
-    left: 1087px;
+    top: 137px;
+    left: -8px;
 }
 
 .element .img {
@@ -52,7 +74,7 @@ body{
     left: 0;
 }
 
-.element .rectangle-2 {
+.element .rectangle-3 {
     position: absolute;
     width: 7px;
     height: 864px;
@@ -62,7 +84,7 @@ body{
     filter: blur(4px);
 }
 
-.element .rectangle-3 {
+.element .rectangle-4 {
     position: absolute;
     width: 7px;
     height: 1016px;
@@ -71,17 +93,6 @@ body{
     background-color: #000000;
     border: 1px solid;
     filter: blur(4px);
-}
-
-.element .rectangle-4 {
-    position: absolute;
-    width: 314px;
-    height: 216px;
-    top: 842px;
-    left: 756px;
-    filter: blur(40px);
-    background: linear-gradient(180deg, rgb(217, 217, 217) 0%, rgba(217, 217, 217, 0) 100%);
-    opacity: 0.7;
 }
 
 .element .and-so-it-has-come {
