--- a/216lab/main.css
+++ b/216lab/main.css
@@ -96,5 +96,5 @@
     width:17.7rem;
     height: 17.7rem
     border-radius: 999rem
-    background: rgba(0,0,0,.9)
+    background-color: rgba(0,0,0,.9)
 }
