--- a/shadow/main.css
+++ b/shadow/main.css
@@ -1,126 +1,271 @@
-
 body{
-    background-color: #000000;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    overflow: visible;
+  background-color: #000000;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  overflow: visible;
 }
 
 a {
-  color: #ffffff;
-  text-decoration: none;
+color: #ffffff;
+text-decoration: none;
 }
 
 .element {
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    height: 100%; 
+background-color: transparent;
+display: flex;
+flex-direction: row;
+justify-content: center;
+width: 100%;
 }
-  
-.element .element-wrapper {
-    width: 100%;
-    height: 100%;
-}
-  
-.element .div {
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-    background-color: #000000;
-    overflow: hidden;
-  }
-  
-  .element .text-wrapper {
-    width: 50%;
-    top: -5%;
-    left: -2%;
-    filter: blur(10px);
-    opacity: 0.7;
-    color: #ffffff;
-    font-size: 30em;
-    white-space: nowrap;
-    position: relative;
-    font-family: "biz-udpmincho", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .element .text-wrapper-2 {
-    width: 50%;
-    bottom: -5%;
-    left: -2%;
-    filter: blur(10px);
-    opacity: 0.7;
-    color: #ffffff;
-    font-size: 30em;
-    color: #ffffff;
-    white-space: nowrap;
-    position: absolute;
-    font-family: "biz-udpmincho", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .element .text-wrapper-3 {
-    width: -50%;
-    top: -5%;
-    right: -2%;
-    filter: blur(10px);
-    opacity: 0.7;
-    color: #ffffff;
-    font-size: 30em;
-    color: #ffffff;
-    white-space: nowrap;
-    position: absolute;
-    font-family: "biz-udpmincho", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .element .text-wrapper-4 {
-    width: -50%;
-    bottom: -5%;
-    right: -2%;
-    filter: blur(10px);
-    opacity: 0.7;
-    color: #ffffff;
-    font-size: 30em;
-    color: #ffffff;
-    white-space: nowrap;
-    position: absolute;
-    font-family: "biz-udpmincho", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .element .text-wrapper-5 {
-    width: 42px;
-    top: 304px;
-    left: 735px;
-    color: #d0d0d0;
-    font-size: 48px;
-    position: absolute;
-    font-family: "biz-udpmincho", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: 0;
-    line-height: normal;
-  }
 
-.links {
-  color: white;
-  text-align: center;
-  letter-spacing: 5px 
+.elementwrap {
+width: 100%;
+height: 100%;
+}
+
+.div {
+position: relative;
+height: 982px;
+background-color: #000000;
+overflow: hidden;
+}
+
+.textwrap1 {
+width: 500px;
+top: -51px;
+left: -50px;
+filter: blur(15px);
+opacity: 0.5;
+color: #ffffff;
+font-size: 510px;
+white-space: nowrap;
+position: absolute;
+text-align: center;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap2 {
+width: 500px;
+top: 531px;
+left: -50px;
+filter: blur(15px);
+opacity: 0.5;
+color: #ffffff;
+font-size: 510px;
+white-space: nowrap;
+position: absolute;
+text-align: center;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap3 {
+width: 500px;
+top: -52px;
+left: 1061px;
+filter: blur(15px);
+opacity: 0.5;
+color: #ffffff;
+font-size: 510px;
+white-space: nowrap;
+position: absolute;
+text-align: center;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap4 {
+width: 500px;
+top: 531px;
+left: 1062px;
+filter: blur(15px);
+opacity: 0.5;
+color: #ffffff;
+font-size: 510px;
+white-space: nowrap;
+position: absolute;
+text-align: center;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap5 {
+width: 45px;
+height: 380px;
+top: 286px;
+left: 734px;
+color: #d0d0d0;
+font-size: 48px;
+position: absolute;
+text-align: center;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.In {
+position: absolute;
+width: 335px;
+height: 20px;
+top: 29px;
+left: 589px;
+color: #ffffff;
+font-size: 14px;
+text-align: center;
+line-height: 30px;
+white-space: nowrap;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap6 {
+left: 636px;
+position: absolute;
+width: 30px;
+height: 20px;
+top: 931px;
+color: #ffffff;
+font-size: 14px;
+text-align: center;
+line-height: 30px;
+white-space: nowrap;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap7 {
+left: 666px;
+position: absolute;
+width: 30px;
+height: 20px;
+top: 931px;
+color: #ffffff;
+font-size: 14px;
+text-align: center;
+line-height: 30px;
+white-space: nowrap;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap8 {
+left: 696px;
+position: absolute;
+width: 30px;
+height: 20px;
+top: 931px;
+color: #ffffff;
+font-size: 14px;
+text-align: center;
+line-height: 30px;
+white-space: nowrap;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap9 {
+left: 726px;
+position: absolute;
+width: 30px;
+height: 20px;
+top: 931px;
+color: #ffffff;
+font-size: 14px;
+text-align: center;
+line-height: 30px;
+white-space: nowrap;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap10 {
+left: 756px;
+position: absolute;
+width: 30px;
+height: 20px;
+top: 931px;
+color: #ffffff;
+font-size: 14px;
+text-align: center;
+line-height: 30px;
+white-space: nowrap;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap11 {
+left: 786px;
+position: absolute;
+width: 30px;
+height: 20px;
+top: 931px;
+color: #ffffff;
+font-size: 14px;
+text-align: center;
+line-height: 30px;
+white-space: nowrap;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap12 {
+left: 816px;
+position: absolute;
+width: 30px;
+height: 20px;
+top: 931px;
+color: #ffffff;
+font-size: 14px;
+text-align: center;
+line-height: 30px;
+white-space: nowrap;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+.textwrap13 {
+left: 846px;
+position: absolute;
+width: 30px;
+height: 20px;
+top: 931px;
+color: #ffffff;
+font-size: 14px;
+text-align: center;
+line-height: 30px;
+white-space: nowrap;
+font-family: "BIZ UDPMincho", serif;
+font-weight: 400;
+font-style: normal;
+}
+
+@keyframes fadeIn {
+from {
+  opacity: 0;
+}
+to {
+  opacity: 0.5;
+}
+}
+
+.textwrap1,
+.textwrap2,
+.textwrap3,
+.textwrap4 {
+animation: fadeIn 3s ease-in-out forwards;
+opacity: 0; 
 }
